# VoxCPMTTS

./: .dockerignore  .gitignore  Dockerfile  README.md  README_zh.md  Taskfile.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker-build-tiny.yml  docker-build.yml
docs/: dockerhub.md
examples/: README.md  index.html  player.js  run_emilia.sh  run_eval.sh  run_finetune.sh  voices.js
examples/assets/: manifest.json
examples/config/: train_config_finetune.json  train_config_finetune_sdpa.json
scripts/: release.ps1  test_pick_runtime_dtype.py
src/voxcpm/: app.py  cli.py  core.py  prefetch_assets.py
tests/: test_cli.py  test_lora_checkpoint_loading.py  test_model_utils.py
voxcpm/: app.py  core.py
voxcpm/tests/: test_cli.py  test_lora_checkpoint_loading.py  test_model_utils.py
