[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcpm"
dynamic = ["version"]
description = "Hangry Labs Docker-first runtime packaging for VoxCPM2 text-to-speech"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "OpenBMB", email = "openbmb@gmail.com"}
]
maintainers = [
    {name = "Hangry Labs"}
]
keywords = ["voxcpm", "text-to-speech", "tts", "speech-synthesis", "voice-cloning", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "transformers>=4.36.2",
    "einops",
    "gradio>=6,<7",
    "fastapi",
    "uvicorn[standard]",
    "inflect",
    "addict",
    "wetext",
    "modelscope>=1.22.0",
    "datasets>=3,<4",
    "huggingface-hub",
    "pydantic",
    "tqdm",
    "simplejson",
    "sortedcontainers",
    "soundfile",
    "librosa",
    "matplotlib",
    "funasr",
    "spaces",
    "safetensors",

]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "pre-commit>=2.0",
]

[project.scripts]
voxcpm = "voxcpm.cli:main"

[project.urls]
Homepage = "https://github.com/hangry-labs/VoxCPMTTS"
Repository = "https://github.com/hangry-labs/VoxCPMTTS.git"
Documentation = "https://github.com/hangry-labs/VoxCPMTTS#readme"
"Bug Tracker" = "https://github.com/hangry-labs/VoxCPMTTS/issues"
"Upstream Project" = "https://github.com/OpenBMB/VoxCPM"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxcpm*"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["voxcpm/tests"]
python_files = ["test_*.py"]
